package handlers

import (
	"context"
	"database/sql"
	"fmt"
	"io"
	"log"
	"os"
	"path/filepath"
	"time"

	"AppTransportistasBack/apptransportistaspb"
	"AppTransportistasBack/config"
)

type AppTransportistasServer struct {
	apptransportistaspb.UnimplementedAppTransportistasServiceServer
}

// ObtenerDespachos env√≠a las gu√≠as no entregadas
func (s *AppTransportistasServer) ObtenerDespachos(req *apptransportistaspb.DespachoRequest, stream apptransportistaspb.AppTransportistasService_ObtenerDespachosServer) error {
	log.Println("üì° Solicitud de gu√≠as pendientes")
	rows, err := config.DB.Query(`
		SELECT id, numero, fecha, codigo_cliente, nombre_cliente,
		       nro_comprobante, importe_x_cobrar, monto_cobrado, entregada
		FROM guia WHERE entregada = 0`)
	if err != nil {
		log.Printf("‚ùå Error consultando gu√≠as: %v", err)
		return err
	}
	defer rows.Close()

	var total int
	for rows.Next() {
		var (
			id                                     int
			numero, fecha, codCli, nomCli, comprob string
			impCobrar, montoCobrado                float64
			entregada                              bool
		)

		if err := rows.Scan(&id, &numero, &fecha, &codCli, &nomCli, &comprob, &impCobrar, &montoCobrado, &entregada); err != nil {
			log.Printf("‚ö†Ô∏è Error leyendo gu√≠a: %v", err)
			continue
		}

		prods := []*apptransportistaspb.Producto{}
		prodRows, err := config.DB.Query(`SELECT nombre, cantidad FROM producto WHERE id_guia = ?`, id)
		if err == nil {
			for prodRows.Next() {
				var n string
				var c int32
				if err := prodRows.Scan(&n, &c); err == nil {
					prods = append(prods, &apptransportistaspb.Producto{Nombre: n, Cantidad: c})
				}
			}
			prodRows.Close()
		}

		if err := stream.Send(&apptransportistaspb.Guia{
			Numero:         numero,
			Fecha:          fecha,
			CodigoCliente:  codCli,
			NombreCliente:  nomCli,
			NroComprobante: comprob,
			ImporteXCobrar: impCobrar,
			MontoCobrado:   montoCobrado,
			Entregada:      entregada,
			Productos:      prods,
		}); err != nil {
			log.Printf("‚ùå Error enviando gu√≠a %s: %v", numero, err)
			return err
		}
		total++
	}

	log.Printf("‚úÖ Total gu√≠as enviadas: %d", total)
	return nil
}

// EnviarEntregas recibe gu√≠as desde la app y las guarda en MySQL
func (s *AppTransportistasServer) EnviarEntregas(stream apptransportistaspb.AppTransportistasService_EnviarEntregasServer) error {
	log.Println("üöÄ Iniciando recepci√≥n de entregas")
	var total int32

	for {
		guia, err := stream.Recv()
		if err == io.EOF {
			log.Printf("‚úÖ Entregas completadas. Total registradas o actualizadas: %d", total)
			return stream.SendAndClose(&apptransportistaspb.EntregaResponse{
				Mensaje:          "Entregas procesadas exitosamente",
				TotalRegistradas: total,
			})
		}
		if err != nil {
			log.Printf("‚ùå Error recibiendo gu√≠a: %v", err)
			return err
		}

		log.Printf("üì• Gu√≠a %s - Cliente: %s", guia.Numero, guia.NombreCliente)

		// Extraer solo la fecha YYYY-MM-DD
		var fechaMysql string
		if guia.Fecha != "" {
			t, err := time.Parse(time.RFC3339, guia.Fecha) // la app env√≠a ISO 8601
			if err != nil {
				log.Printf("‚ö†Ô∏è Fecha inv√°lida '%s' para gu√≠a %s: %v", guia.Fecha, guia.Numero, err)
				fechaMysql = "0001-01-01" // fallback m√≠nimo
			} else {
				fechaMysql = t.Format("2006-01-02") // solo fecha
			}
		} else {
			fechaMysql = "0001-01-01" // fallback si viene vac√≠a
		}

		// Verificar si ya existe la gu√≠a
		var idGuia int64
		var entregada bool
		err = config.DB.QueryRow(`SELECT id, entregada FROM guia WHERE numero = ?`, guia.Numero).Scan(&idGuia, &entregada)

		if err == sql.ErrNoRows {
			// Insertar
			res, err := config.DB.Exec(`
				INSERT INTO guia (numero, fecha, codigo_cliente, nombre_cliente, nro_comprobante,
								  importe_x_cobrar, monto_cobrado, entregada)
				VALUES (?, ?, ?, ?, ?, ?, ?, ?)`,
				guia.Numero, fechaMysql, guia.CodigoCliente, guia.NombreCliente,
				guia.NroComprobante, guia.ImporteXCobrar, guia.MontoCobrado, guia.Entregada)

			if err != nil {
				log.Printf("‚ùå Error insertando gu√≠a %s: %v", guia.Numero, err)
				continue
			}

			idGuia, _ = res.LastInsertId()
			log.Printf("üÜï Gu√≠a %s insertada", guia.Numero)

		} else if err == nil {
			if entregada {
				log.Printf("‚ö†Ô∏è Gu√≠a %s ya fue entregada. Se ignora.", guia.Numero)
				continue
			}

			// Actualizar
			_, err = config.DB.Exec(`
				UPDATE guia SET fecha = ?, codigo_cliente = ?, nombre_cliente = ?, nro_comprobante = ?,
								importe_x_cobrar = ?, monto_cobrado = ?, entregada = ?
				WHERE id = ?`,
				fechaMysql, guia.CodigoCliente, guia.NombreCliente, guia.NroComprobante,
				guia.ImporteXCobrar, guia.MontoCobrado, guia.Entregada, idGuia)

			if err != nil {
				log.Printf("‚ùå Error actualizando gu√≠a %s: %v", guia.Numero, err)
				continue
			}
			log.Printf("üîÑ Gu√≠a %s actualizada", guia.Numero)

			// Borrar productos anteriores
			_, _ = config.DB.Exec("DELETE FROM producto WHERE id_guia = ?", idGuia)
		} else {
			log.Printf("‚ùå Error consultando gu√≠a %s: %v", guia.Numero, err)
			continue
		}

		// Insertar productos
		for _, p := range guia.Productos {
			_, err := config.DB.Exec(`INSERT INTO producto (id_guia, nombre, cantidad) VALUES (?, ?, ?)`,
				idGuia, p.Nombre, p.Cantidad)

			if err != nil {
				log.Printf("‚ö†Ô∏è Producto %s - Error: %v", p.Nombre, err)
			}
		}

		total++
	}
}

// EnviarPruebasEntrega recibe pruebas desde la app y las guarda en MySQL
func (s *AppTransportistasServer) EnviarPruebasEntrega(stream apptransportistaspb.AppTransportistasService_EnviarPruebasEntregaServer) error {
	log.Println("üì© Recibiendo pruebas de entrega...")

	baseFirmaPath := `C:\Users\PracSistemas\Documents\Visual Studio Code\AppTransportistasBack\img\pruebas\firmas`
	baseFotoPath := `C:\Users\PracSistemas\Documents\Visual Studio Code\AppTransportistasBack\img\pruebas\fotos`
	_ = os.MkdirAll(baseFirmaPath, os.ModePerm)
	_ = os.MkdirAll(baseFotoPath, os.ModePerm)

	var total int32

	for {
		prueba, err := stream.Recv()
		if err == io.EOF {
			log.Printf("‚úÖ Pruebas de entrega recibidas: %d", total)
			return stream.SendAndClose(&apptransportistaspb.PruebaEntregaResponse{
				Mensaje:          "Pruebas registradas correctamente",
				TotalRegistradas: total,
			})
		}
		if err != nil {
			log.Printf("‚ùå Error recibiendo prueba: %v", err)
			return err
		}

		log.Printf("üñäÔ∏è Prueba para gu√≠a %s", prueba.NumeroGuia)

		var guiaID int
		err = config.DB.QueryRow("SELECT id FROM guia WHERE numero = ?", prueba.NumeroGuia).Scan(&guiaID)
		if err != nil {
			log.Printf("‚ùå Gu√≠a %s no encontrada: %v", prueba.NumeroGuia, err)
			continue
		}

		fecha, err := time.Parse("2006-01-02 15:04:05", prueba.FechaRegistro)
		if err != nil {
			log.Printf("‚ö†Ô∏è Fecha inv√°lida '%s' para gu√≠a %s", prueba.FechaRegistro, prueba.NumeroGuia)
			continue
		}

		// Guardar firma como imagen
		firmaPath := ""
		if len(prueba.Firma) > 0 {
			firmaName := fmt.Sprintf("firma_guia_%s.jpg", prueba.NumeroGuia)
			firmaPath = filepath.Join(baseFirmaPath, firmaName)
			if err := os.WriteFile(firmaPath, prueba.Firma, 0644); err != nil {
				log.Printf("‚ö†Ô∏è No se pudo guardar firma para gu√≠a %s: %v", prueba.NumeroGuia, err)
				continue
			}
		}

		// Guardar imagen de comprobante
		imgPath := ""
		if len(prueba.Imagen) > 0 {
			imgName := fmt.Sprintf("img_guia_%s.jpg", prueba.NumeroGuia)
			imgPath = filepath.Join(baseFotoPath, imgName)
			if err := os.WriteFile(imgPath, prueba.Imagen, 0644); err != nil {
				log.Printf("‚ö†Ô∏è No se pudo guardar imagen para gu√≠a %s: %v", prueba.NumeroGuia, err)
				continue
			}
		}

		var existe int
		err = config.DB.QueryRow(`SELECT COUNT(*) FROM prueba_entrega WHERE guia_id = ?`, guiaID).Scan(&existe)
		if err != nil {
			log.Printf("‚ùå Error verificando existencia de prueba para gu√≠a %s: %v", prueba.NumeroGuia, err)
			continue
		}
		if existe > 0 {
			log.Printf("‚è© Prueba ya registrada para gu√≠a %s, omitiendo", prueba.NumeroGuia)
			continue
		}

		_, err = config.DB.Exec(`
			INSERT INTO prueba_entrega (guia_id, fecha_registro, firma_path, imagen_path)
			VALUES (?, ?, ?, ?)`,
			guiaID, fecha, firmaPath, imgPath)
		if err != nil {
			log.Printf("‚ùå Error guardando prueba para gu√≠a %s: %v", prueba.NumeroGuia, err)
			continue
		}

		total++
	}
}

// LoginAdmin verifica las credenciales del administrador
func (s *AppTransportistasServer) LoginAdmin(ctx context.Context, req *apptransportistaspb.LoginRequest) (*apptransportistaspb.LoginResponse, error) {
	usuario := req.GetUsuario()
	password := req.GetPassword()

	var count int
	err := config.DB.QueryRow(
		`SELECT COUNT(*) FROM admin WHERE usuario = ? AND password = ?`,
		usuario, password,
	).Scan(&count)
	if err != nil && err != sql.ErrNoRows {
		log.Printf("‚ùå Error verificando login: %v", err)
		return &apptransportistaspb.LoginResponse{
			Success: false,
			Mensaje: "Error interno en el servidor",
		}, nil
	}

	if count > 0 {
		return &apptransportistaspb.LoginResponse{
			Success: true,
			Mensaje: "Acceso permitido",
		}, nil
	}

	return &apptransportistaspb.LoginResponse{
		Success: false,
		Mensaje: "Usuario o contrase√±a incorrectos",
	}, nil
}

// EnviarTracking recibe ubicaciones desde la app y las guarda en MySQL
func (s *AppTransportistasServer) EnviarTracking(stream apptransportistaspb.AppTransportistasService_EnviarTrackingServer) error {
	log.Println("üì° Recibiendo tracking de dispositivos...")

	var total int32

	for {
		ubicacion, err := stream.Recv()
		if err == io.EOF {
			log.Printf("‚úÖ Tracking recibido. Total registros: %d", total)
			return stream.SendAndClose(&apptransportistaspb.TrackingResponse{
				Mensaje:          "Tracking registrado correctamente",
				TotalRegistrados: total,
			})
		}
		if err != nil {
			log.Printf("‚ùå Error recibiendo ubicaci√≥n: %v", err)
			return err
		}

		log.Printf("üìç Dispositivo %s - Lat: %f, Lon: %f, Fecha: %s",
			ubicacion.DeviceId, ubicacion.Latitud, ubicacion.Longitud, ubicacion.FechaHora)

		// Insertar en la tabla tracking
		_, err = config.DB.Exec(`
            INSERT INTO tracking (device_id, latitud, longitud, fecha_hora)
            VALUES (?, ?, ?, ?)`,
			ubicacion.DeviceId, ubicacion.Latitud, ubicacion.Longitud, ubicacion.FechaHora,
		)
		if err != nil {
			log.Printf("‚ùå Error guardando ubicaci√≥n para dispositivo %s: %v", ubicacion.DeviceId, err)
			continue
		}

		total++
	}
}
